Fixed team-chat view where long messages are rendered with overflow:hidden

--- a/nb/src/CTF/QuestBundle/Resources/public/css/dash.css
+++ b/nb/src/CTF/QuestBundle/Resources/public/css/dash.css
@@ -80,6 +80,8 @@ body {
 #chat div.message {
     margin: 6px 2px;
     clear: both;
+    word-wrap: break-word;
+    max-width: 80%;
 }
 
 .right {
